# anniedirt

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_debug  README  README.md  annie_v02.gdml  build commands  g4annie_dirt_flux.cc  run_annie_g4dirt.sh  run_g4dirt.sh  setup_Dockerfile.sh  setup_annie.sh  setup_anniedirt.sh  submission commands
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  G4PhysListRegisterOld.icc  G4PhysListRegisterOld.icc_obsolete  MyEventRecord.hh  N03PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh  VolumeChecker.hh
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  MyEventRecord.cc  N03PhysicsList.cc  N03PhysicsList.cc_obsolete  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc  VolumeChecker.cc  annie_v01.gdml
